Modularize project